--- a/templates/alert/alert.html
+++ b/templates/alert/alert.html
@@ -1,11 +1,11 @@
+
 {% if messages %}
 <div class="container">
-
   {% for message in messages %}
-  <div class="alert alert-{{ message.tags }} alert-dismissible">
-    <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-    <strong>{{ message.tag_label }}!</strong> {{ message }}
-  </div>
+    <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+      <strong>{{ message.tag_label }}!</strong> {{ message }}
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
   {% endfor %}
 </div>
 {% endif %}
