--- a/templates/artist/artist.html
+++ b/templates/artist/artist.html
@@ -1,10 +1,11 @@
-{% extends "base.html" %}
+{% extends "main_base.html" %}
 
 {% load static %}
 {% load humanize %}
 
-<link rel="stylesheet" href="{% static "css/music_detail.css" %}">
 {% block content %}
+
+<link rel="stylesheet" href="{% static "css/music_detail.css" %}">
 
     <div class="content__middle">
 
@@ -38,7 +39,7 @@
                 <button class="button-light">Follow</button>
 
                 <button class="button-light more">
-                    <i class="fas fa-heart fa-9x" style="color: #34a247; font-size: 13px; margin-left:6px;"></i>
+                    <i class="fas fa-heart fa-9x" style="color: #34a247; font-size: 13px"></i>
                 </button>
 
 
@@ -90,7 +91,6 @@
 
           <div class="tab-content">
 
-            <!-- Overview -->
             <div role="tabpanel" class="tab-pane active" id="artist-overview">
 
               <div class="overview">
@@ -98,8 +98,8 @@
                 <div class="overview__artist">
 
 
-{% if artists.music.all %}
-    {% with latest_music=artists.music.all|first %}
+      {% if artists.music.all %}
+        {% with latest_music=artists.music.all|first %}
         <div class="section-title">Latest Released</div>
 
       <a href="{% url "music:detail" latest_music.pk %}"></a>
@@ -286,7 +286,7 @@
 
 
             </div>
-             <!-- Related Artists -->
+
             <div role="tabpanel" class="tab-pane" id="related-artists">
 
               <div class="media-cards">
@@ -397,6 +397,7 @@
         </div>
 
       </div>
+
 
 
 
