--- a/templates/home/FAQ.html
+++ b/templates/home/FAQ.html
@@ -1,5 +1,5 @@
 {% load static %}
-
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css">
 <div class="sidebar">
         <div class="logo">
              <a href="{% url "home:home" %}">
@@ -50,22 +50,13 @@
             </ul>
         </div>
 
-        <div class="policies">
-            <ul>
-                <li>
-                    <a href="#">Cookies</a>
-                </li>
-                <li>
-                    <a href="#">Privacy</a>
-                </li>
-            </ul>
-        </div>
+
 
 
     </div>
 <link rel="stylesheet" href="{% static "css/FAQ.css" %}">
-     <link rel="stylesheet" href="{% static "css/home.css" %}">
-<!-- Design on Dribbble: https://dribbble.com/shots/3967265-FAQ -->
+     <link rel="stylesheet" href="{% static "css/main_base.css" %}">
+
 
 <div class="anun">
 <h1>Frequently Asked Questions</h1>
@@ -74,11 +65,10 @@
 <div class="faqs-container">
   <div class="faq active">
     <h3 class="faq-title">
-      Why shouldn't we trust your template?
-    </h3>
+Who is the best teacher    </h3>
     <p class="faq-text">
-      We can provide you with best Spotify simulations and we are save.
-    </p>
+        Hayk Nersesyan
+        </p>
     <button class="faq-toggle">
       <i class="fas fa-chevron-down"></i>
       <i class="fas fa-times"></i>
@@ -113,11 +103,9 @@
 
   <div class="faq">
     <h3 class="faq-title">
-      How many songs I can add in my account?
-    </h3>
+Who are the worst developers ever    </h3>
     <p class="faq-text">
-      it depends on your account type
-    </p>
+Jasmin Khachatryan and Sophie Melkonayn     </p>
     <button class="faq-toggle">
       <i class="fas fa-chevron-down"></i>
       <i class="fas fa-times"></i>
