--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -1,10 +1,10 @@
 {% extends "main_base.html" %}
 {% load static %}
-{% include "alert/alert.html" %}
+
 
 {% block content %}
 
-
+<link rel="stylesheet" href="{% static "css/home.css" %}">
 <div class="spotify-playlists">
 
     {% for album_chunk in chunked_albums %}
