--- a/templates/main_base.html
+++ b/templates/main_base.html
@@ -3,11 +3,15 @@
 <!DOCTYPE html>
 
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css">
     <link rel="icon" href="https://th.bing.com/th/id/R.f7ce343ed66e80d60e87479d2c6753c3?rik=mZlpLMbwFr3BQg&riu=http%3a%2f%2fpluspng.com%2fimg-png%2fspotify-logo-png-open-2000.png&ehk=ZCBP9f2uKAkYi2gLrP%2fkO3Tjpcf49Bki%2fwcRu4kBXb0%3d&risl=&pid=ImgRaw&r=0"
       type="image/x-icon" sizes="64x64">
-     <link rel="stylesheet" href="{% static "css/home.css" %}">
+     <link rel="stylesheet" href="{% static "css/main_base.css" %}">
     <title>
          Spotify
     </title>
@@ -126,10 +130,7 @@
 
 
 
-
-
-
-
+        {% include "alert/alert.html" %}
         {% block  content %}
 
 
