--- a/templates/music/add_music.html
+++ b/templates/music/add_music.html
@@ -1,80 +1,69 @@
 {% extends 'main_base.html' %}
 
 {% block content %}
-  <div class="container" style="margin: left 60px">
-    <h2 class="mt-4 mb-4" style="color:white;">Add Music</h2>
+{% load crispy_forms_tags %}
 
-    <form method="post" enctype="multipart/form-data">
-      {% csrf_token %}
+<div class="container" style="margin-left:17%">
+  <h2 class="mt-4 mb-4" style="color:white;">Add Music</h2>
+  <form method="post" enctype="multipart/form-data">
+    {% csrf_token %}
 
-      <div class="form-group" style="color:white;">
+    <div class="form-group" style="color:white">
+      <label form="{{ form.name.id_for_label }}">Name:</label>
+      {{ form.name | crispy }}
+    </div>
 
-        {{ form.name }}
-        <label for="{{ form.name.id_for_label }}">Name:</label>
-      </div>
+    <div class="form-group" style="color:white;">
+      <label form="{{ form.category.id_for_label }}">Category:</label>
+      {{ form.category | crispy }}
+    </div>
 
-      <div class="form-group" style="color:white;">
+    <div class="form-group" style="color:white;">
+      <label form="{{ form.artist.id_for_label }}">Artist:</label>
+      {{ form.artist | crispy }}
+    </div>
 
-        {{ form.category }}
-          <label for="{{ form.category.id_for_label }}">Category:</label>
-      </div>
+    <div class="form-group" style="color:white;">
+      <label form="{{ form.album.id_for_label }}">Album:</label>
+      {{ form.album | crispy }}
+    </div>
 
-      <div class="form-group" style="color:white;">
+    <div class="form-group" style="color:white;">
+      <label form="{{ form.image.id_for_label }}">Image:</label>
+      {{ form.image | crispy }}
+    </div>
 
-        {{ form.artist }}
-         <label for="{{ form.artist.id_for_label }}">Artist:</label>
-      </div>
+    <div class="form-group" style="color:white;">
+      <label form="{{ form.cover_image.id_for_label }}">Cover Image:</label>
+      {{ form.cover_image | crispy }}
+    </div>
 
-      <div class="form-group" style="color:white;">
+    <div class="form-group" style="color:white;">
+      <label form="{{ form.description.id_for_label }}">Description:</label>
+      {{ form.description | crispy }}
+    </div>
 
-        {{ form.album }}
-         <label for="{{ form.album.id_for_label }}">Album:</label>
-      </div>
+    <div class="form-group" style="color:white;">
+      <label form="{{ form.year.id_for_label }}">Year:</label>
+      {{ form.year | crispy }}
+    </div>
 
-      <div class="form-group" style="color:white;">
+    <div class="form-group" style="color:white;">
+      <label form="{{ form.duration.id_for_label }}">Duration:</label>
+      {{ form.duration | crispy }}
+    </div>
 
-        {{ form.image }}
-         <label for="{{ form.image.id_for_label }}">Image:</label>
-      </div>
+    <div class="form-group" style="color:white;">
+      <label form="{{ form.file.id_for_label }}">File:</label>
+      {{ form.file | crispy }}
+    </div>
 
-      <div class="form-group" style="color:white;">
+    <div class="form-group" style="color:white;">
+      <label form="{{ form.listens.id_for_label }}">Listens:</label>
+      {{ form.listens | crispy }}
+    </div>
 
-        {{ form.cover_image }}
-        <label for="{{ form.cover_image.id_for_label }}">Cover Image:</label>
-      </div>
-
-      <div class="form-group" style="color:white;">
-
-        {{ form.description }}
-         <label for="{{ form.description.id_for_label }}">Description:</label>
-      </div>
-
-      <div class="form-group" style="color:white;">
-
-        {{ form.year }}
-        <label for="{{ form.year.id_for_label }}">Year:</label>
-      </div>
-
-      <div class="form-group" style="color:white;">
-
-        {{ form.duration }}
-                <label for="{{ form.duration.id_for_label }}">Duration:</label>
-      </div>
-
-      <div class="form-group" style="color:white;">
-
-        {{ form.file }}
-         <label for="{{ form.file.id_for_label }}">File:</label>
-      </div>
-
-      <div class="form-group" style="color:white;">
-
-        {{ form.listens }}
-          <label for="{{ form.listens.id_for_label }}">Listens:</label>
-      </div>
-
-      <button type="submit" class="btn btn-primary">Save Music</button>
-    </form>
-  </div>
+    <button type="submit" class="btn btn-primary">Save Music</button>
+  </form>
+</div>
 {% endblock %}
-
