--- a/templates/users/edit_profile.html
+++ b/templates/users/edit_profile.html
@@ -2,12 +2,10 @@
 {% load static %}
 
 
-
-
 <link rel="stylesheet" href="{% static "css/profile.css" %}">
 <main class="container">
     <div class="card">
-
+ <div class="form-group">
 <div class="text-break flex-grow-1" style="color:white;">
 <div class="form-label" style="color:white;">
 
@@ -15,6 +13,7 @@
             <img src="{% if user.image %}{{ user.image.url }}{% else %}{% static 'img/no_image.jpeg' %}{% endif %}" class="card__image" />
             {% csrf_token %}
             {{ form|crispy }}
+
             <div class="d-grid gap-2">
                 <button class="btn btn-success" type="Submit">Submit</button>
             </div>
@@ -22,10 +21,6 @@
             </div>
         </form>
     </div>
-
-
-
-
       </div>
-    </div>
+
   </main>
