--- a/templates/users/authentication.html
+++ b/templates/users/authentication.html
@@ -1,5 +1,9 @@
-<h1>Congratulations</h1>
+{% autoescape off %}
 
-<p>Please follow the link to complete your registration</p>
+Congratulations
 
-<a href="">{{ domain }}/{{ user.pk }}/{{ token }}</a>
+Please follow the link to complete your registration
+
+http://{{ domain }}/user/{{ user.pk }}/{{ token }}
+
+{% endautoescape %}
