--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -39,9 +39,9 @@
                 </label>
                 <input type="password" class="form_input" name="password" placeholder="Password" required>
                 {% if not case %}
-                <span style="color:#f79862;
+                <a href="{% url "reset_password" %}" ><span style="color:#f79862;
                              padding-bottom:20px;
-                             text-align:center;">Forgot Password?</span>
+                             text-align:center;">Forgot Password?</span></a>
                 {% endif %}
                 <button class='btn btn_log_in' type="submit">Log in</button>
                 <div class="divider"></div>
