user/artist profile changeing

--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -1,4 +1,8 @@
+
 {% load static %}
+
+
+
 
 <link rel="stylesheet" href="{% static "css/profile.css" %}">
 <main class="container">
@@ -27,4 +31,6 @@
         <a href="{% url "home:home" %}"<button class="card__action__button card__action--message">Go back</button></a>
       </div>
     </div>
-  </main> -->
+  </main>
+
+
