--- a/templates/music/liked_songs.html
+++ b/templates/music/liked_songs.html
@@ -5,13 +5,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="https://cdn.discordapp.com/icons/715958380556058684/773d6583cd1d7aef41e701783d353aef.webp?size=128" type="image/x-icon">
+	<link rel="icon" href="https://th.bing.com/th/id/R.f7ce343ed66e80d60e87479d2c6753c3?rik=mZlpLMbwFr3BQg&riu=http%3a%2f%2fpluspng.com%2fimg-png%2fspotify-logo-png-open-2000.png&ehk=ZCBP9f2uKAkYi2gLrP%2fkO3Tjpcf49Bki%2fwcRu4kBXb0%3d&risl=&pid=ImgRaw&r=0"
+     type="image/x-icon">
 <meta name="description" itemprop="description"
         content="Play your playlists and favourites tracks, albums, and artists of YouTube with a Spotify styled UI" />
     <meta name="keywords"
         content="convert, convert playlists, transfer, syncing, smart links, free, apple music, streaming services, spotify, youtube" />
 	<link rel="stylesheet" href="{% static 'css/liked_songs.css' %}?{% now " U " %}"> {% block css %} {% endblock %}
-	<title>Youttify</title>
+	<title>Spotify</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js">
 	</script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.css">
@@ -25,7 +26,9 @@
 	<div class="sidebar">
 
 		<img class="logo"
-            src="https://cdn.discordapp.com/attachments/768083738848133130/768372618880483328/spotify.svg"></img>
+            src="https://cdn.discordapp.com/attachments/768083738848133130/768372618880483328/spotify.svg">
+
+        </img>
 
         <div class="options-section">
             <div class="options home {% block home %}
@@ -150,350 +153,7 @@
         {% endblock %}
     </div>
 
-
-
-
-
-
-    <div class="playbar">
-        <div class="current-playing">
-
-            <div class="cur-info">
-                <div class='label cur-title underline-on-hover bond-to-two-lines' id="songName" onclick="iframeToggle()">Heer Ranjha - Bhuvan Bam | Official Music Video |</div>
-                <div class='label' id='channel_container'>
-                    <div class='label cur-author underline-on-hover bond-to-two-lines' id='channel'></div>
-                </div>
-
-            </div>
-            <form id='like-form'>
-              {% csrf_token %}
-            <div type='submit' class="like-icon mainicons" id="like-icon">
-                <img class="heart" id="stroke"
-                    src="https://cdn.discordapp.com/attachments/768083738848133130/773960377683673198/Vector1.svg"
-                    alt="">
-                <img class="heart hidden" id="filled"
-                    src="https://cdn.discordapp.com/attachments/768083738848133130/773960848972185650/Vector2.svg"
-                    alt="">
-            </div>
-            </form>
-        </div>
-
-
-        <div class="playback">
-            <div class="playOptions">
-                <div onclick="goToStart()" class="mainicons">
-                    <img class="mainicons"
-                        src="https://cdn.discordapp.com/attachments/768083738848133130/773142728145371146/skip-back.svg"
-                        alt=""></img></div>
-
-                <div id='playicon' class="mainicons playicon">
-                    <img class="mainicons playicon"
-                        src="https://cdn.discordapp.com/attachments/768083738848133130/773142731144560640/play-circle.svg"
-                        alt=""></img></div>
-
-                <div id='pauseicon' class="mainicons playicon">
-                    <img class="mainicons playicon"
-                        src="https://cdn.discordapp.com/attachments/768083738848133130/773873949082910751/pause-circle.svg"
-                        alt=""></img></div>
-                <div class="mainicons" onclick="nextSong()">
-                    <img class="mainicons"
-                        src="https://cdn.discordapp.com/attachments/768083738848133130/773142729714696212/skip-forward.svg"
-                        alt=""></img></div>
-            </div>
-
-            <div class="slider">
-                <span id="currentDur"></span>
-                <div class="range-slider">
-                    <input id="progressBar" class="range-slider__range" type="range" value="0" min="0" max="100">
-                </div>
-                <span id="duration"></span>
-            </div>
-
-        </div>
-
-
-        <div class="play-options">
-            <img id='vol-icon' class='mainicons' src="" alt="">
-            <div id='volume' class="range-slider">
-                <input id='volumeBar' oninput="setVolume()" class="range-slider__range" type="range" value="100" min="0"
-                    max="500">
-            </div>
-        </div>
-
-    </div>
-
-</div>
-
-
-
-
-    <script src="https://kit.fontawesome.com/23cecef777.js" crossorigin="anonymous"></script>
 </body>
-<script>
 
-    const sliders = document.getElementsByClassName('cardContainer');
-    let isDown = false;
-    let startX;
-    let scrollLeft;
-    for (let ind=0; ind<sliders.length; ind++){
-        let slider = sliders[ind];
-        slider.addEventListener('mousedown', (e) => {
-          isDown = true;
-          slider.classList.add('dragging');
-          startX = e.pageX - slider.offsetLeft;
-          scrollLeft = slider.scrollLeft;
-        });
-        slider.addEventListener('mouseleave', () => {
-          isDown = false;
-          slider.classList.remove('dragging');
-        });
-        slider.addEventListener('mouseup', () => {
-          isDown = false;
-          slider.classList.remove('dragging');
-        });
-        slider.addEventListener('mousemove', (e) => {
-          if(!isDown) return;
-          e.preventDefault();
-          const x = e.pageX - slider.offsetLeft;
-          const walk = (x - startX) * 1; //scroll-fast
-          slider.scrollLeft = scrollLeft - walk;
-        //   console.log(walk);
-    });
-    }
-
-
-    // global variable for the player
-    var heart = document.getElementById('like-icon');
-    heart.addEventListener("click", function () {
-        document.getElementById('stroke').classList.toggle('hidden');
-        document.getElementById('filled').classList.toggle('hidden');
-        setTimeout(function(){
-            document.getElementById('stroke').classList.toggle('hidden');
-            document.getElementById('filled').classList.toggle('hidden');
-        }, 500);
-    });
-
-
-    function iframeToggle() {
-        document.getElementById('ytbPlayerCont').classList.toggle('hidden');
-    };
-
-
-    var player;
-    var pauseButton = document.getElementById("pauseicon");
-    var playButton = document.getElementById("playicon");
-    pauseButton.classList.toggle("hidden");
-    document.getElementById("progressBar").value = 0;
-    var progressBar = document.getElementById("progressBar");
-
-
-    var dur;
-
-    // this function gets called when API is ready to use
-    function onYouTubePlayerAPIReady() {
-        // create the global player from the specific iframe (#video)
-        player = new YT.Player('video', {
-            events: {
-                // call this function when player is ready to use
-                'onReady': onPlayerReady,
-                'onStateChange': onPlayerStateChange
-            }
-        });
-    }
-
-    function str_pad_left(string, pad, length) {
-        return (new Array(length + 1).join(pad) + Math.round(string)).slice(-length);
-    }
-
-
-    var iframe = document.getElementById("video");
-
-
-
-    function playSong(id, playlistId, liked=false) {
-        if (liked){
-            iframe.src = `https://www.youtube-nocookie.com/embed/${id}?autoplay=1&controls=0&disablekb=1&enablejsapi=1&iv_load_policy=3&vq=medium`;
-            play();
-        } else{
-        iframe.src = `https://www.youtube-nocookie.com/embed/?listType=playlist&list=${playlistId}&index=${id}&autoplay=1&controls=0&disablekb=1&enablejsapi=1&iv_load_policy=3&vq=medium`;
-        play();
-        }
-    };
-
-    function nextSong(){
-        player.nextVideo();
-        play();
-    }
-
-
-    function play() {
-        if (pauseButton.classList.contains("hidden")) {
-            playButton.classList.toggle("hidden");
-            pauseButton.classList.toggle("hidden");
-        };
-        player.playVideo();
-    };
-
-    function pause() {
-        if (playButton.classList.contains("hidden")) {
-            pauseButton.classList.toggle("hidden");
-            playButton.classList.toggle("hidden");
-        };
-        player.pauseVideo();
-    };
-
-
-    function infoUpdate() {
-      try{
-        dur = player.getDuration();
-        let minutes = Math.floor(dur / 60);
-        let seconds = dur - minutes * 60;
-        let finalTime = str_pad_left(minutes, '0', 2) + ':' + str_pad_left(seconds, '0', 2);
-        document.getElementById("duration").innerHTML = finalTime;
-        var nowPlaying = player.getVideoData();
-        // console.log(nowPlaying, 'hey')
-        document.getElementById('songName').innerHTML = nowPlaying['title'];
-        document.getElementById('channel').innerHTML = nowPlaying['author'];
-      }
-      catch{
-          console.log('error!')
-          document.getElementById('songName').innerHTML='Heer Ranjha'
-          document.getElementById('channel').innerHTML='BB Ki Vines'
-      }
-    };
-
-
-    function onPlayerReady(event) {
-        playButton.addEventListener("click", play);
-        pauseButton.addEventListener("click", pause);
-        setVolume();
-        onPlayerStateChange(event);
-    }
-
-
-    function goToStart() {
-        player.seekTo(0);
-        progressBar.value = 0;
-        player.previousVideo();
-        play();
-    }
-
-
-    function setVolume() {
-        let v = Math.floor(document.getElementById("volumeBar").value / 5);
-        player.setVolume(v);
-        vol_ico = document.getElementById('vol-icon');
-        if (v == 0) {
-            vol_ico.src = 'https://cdn.discordapp.com/attachments/768083738848133130/773923517091676190/v0.png';
-        }
-        else if (v < 33) {
-            vol_ico.src = 'https://cdn.discordapp.com/attachments/768083738848133130/773921824635093013/v1.png';
-        }
-        else if (v < 66) {
-            vol_ico.src = 'https://cdn.discordapp.com/attachments/768083738848133130/773921822492065843/v2.png';
-        }
-        else {
-            vol_ico.src = 'https://cdn.discordapp.com/attachments/768083738848133130/773921819879014421/v3.png';
-        }
-
-    }
-
-progressBar.addEventListener('input', function () {
-    var seek = progressBar.value;
-    finalSeek = (seek * dur) / 100;
-    player.seekTo(finalSeek);
-    play()
-})
-
-    function onPlayerStateChange(event) {
-        console.log('this');
-        mytimer = setInterval(function () {
-            infoUpdate();
-
-            dur = player.getDuration();
-            var playerCurrentTime = player.getCurrentTime();
-            var playerTimeDifference = (playerCurrentTime / dur) * 100;
-            progressBar.value = playerTimeDifference;
-            let minutes = Math.floor(playerCurrentTime / 60);
-            let seconds = playerCurrentTime - (minutes * 60);
-            let currentDur = str_pad_left(minutes, '0', 2) + ':' + str_pad_left(seconds, '0', 2);
-            document.getElementById("currentDur").innerHTML = currentDur;
-        }, 1000);
-
-
-
-        iframe.addEventListener("DOMAttrModified", function(event) {
-            if (event.attrName == "src") {
-            console.log('this');
-            }
-        });
-        if (event.data == YT.PlayerState.PLAYING) {
-            progressBar.addEventListener('input', function () {
-                var seek = progressBar.value;
-                finalSeek = (seek * dur) / 100;
-                player.seekTo(finalSeek);
-            });
-
-
-
-            mytimer = setInterval(function () {
-                infoUpdate();
-                dur = player.getDuration();
-                var playerCurrentTime = player.getCurrentTime();
-                var playerTimeDifference = (playerCurrentTime / dur) * 100;
-                progressBar.value = playerTimeDifference;
-                let minutes = Math.floor(playerCurrentTime / 60);
-                let seconds = playerCurrentTime - (minutes * 60);
-                let currentDur = str_pad_left(minutes, '0', 2) + ':' + str_pad_left(seconds, '0', 2);
-                document.getElementById("currentDur").innerHTML = currentDur;
-            }, 1000);
-        }
-    }
-
-
-
-
-    // Inject YouTube API script
-    var tag = document.createElement('script');
-    tag.src = "https://www.youtube.com/player_api";
-    var firstScriptTag = document.getElementsByTagName('script')[0];
-    firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-
-
-    $(document).on('click', '#like-form', function(e){
-      e.preventDefault();
-        var today = new Date();
-        var dd = String(today.getDate()).padStart(2, '0');
-        var mm = String(today.getMonth() + 1).padStart(2, '0');
-        var yyyy = today.getFullYear();
-        today = dd + '/' + mm + '/' + yyyy;
-      console.log('that',{
-          'title':$("#songName").text(),
-          'channel': $("#channel"),
-          'date': today,
-          'duration': $("#duration").text(),
-          'csrfmiddlewaretoken': $('input[name=csrfmiddlewaretoken]').val()
-        })
-
-
-
-        var youtube_video_id = player.getVideoData()['video_id'];
-      $.ajax({
-        type:'POST',
-        url:window.location.pathname,
-        data:{
-          'title':$("#songName").text(),
-          'songid':youtube_video_id,
-          'channel': $("#channel").text(),
-          'date': today,
-          'duration': $("#duration").text(),
-          'csrfmiddlewaretoken': $('input[name=csrfmiddlewaretoken]').val()
-        },
-
-      })
-
-    });
-</script>
-</body>
 
 </html>
