--- a/static/css/liked_songs.css
+++ b/static/css/liked_songs.css
@@ -1,10 +1,11 @@
 html, body, .grid-container {
     height: 100%;
     margin: 0;
+    padding:0;
     color: #b3b3b3;
     font-family: Circular, Helvetica Neue, Helvetica, Arial, sans-serif;
     user-select: none;
-    overflow-y: hidden;
+
 }
 a {
     text-decoration: none;
@@ -32,12 +33,12 @@ input:invalid {
 .grid-container {
   display: grid;
   grid-template-columns: 232px auto;
-  grid-template-rows: 60px auto 90px;
+
   gap: 0px 0px;
   grid-template-areas:
     "sidebar navbar"
     "sidebar main"
-    "playbar playbar";
+    ;
 }
 
 .label {
@@ -367,245 +368,9 @@ input:invalid {
 
 
 
-.card {
-    width: 220px;
-    background: #181818;
-    display: flex;
-    flex-direction: column;
-    border-radius: 6px;
-    /*cursor: default;*/
-    transition: 0.25s ease-in-out;
-    margin-right: 16px;
-}
-
-.albumcover {
-    margin: 20px;
-    width: 180px;
-    height: 180px;
-    /* background: black; */
-    box-shadow: 0px 4px 20px #000000;
-    border-radius: 4px;
-}
-.albumimg{
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    border-radius: 5px;
-    pointer-events: none;
-}
-
-
-.albumplay{
-    width: 40px;
-    margin-right: 8px;
-    float: right;
-    opacity: 0;
-    transition: .5s ease;
-    margin-top: -46px;
-    cursor: pointer;
-}
-
-.albumplay img{
-    object-fit: contain;
-    width: 100%;
-    pointer-events: none;
-}
-.albumplay img:hover {
-    transform: scale(1.05);
-}
-
-.albumtitle {
-    color: white;
-    margin-left: 20px;
-    line-height: 16px;
-
-}
-
-.bond-to-two-lines{
-  overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    max-width: 180px;
-}
-
-.albumauthor {
-    margin-left: 20px;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 16px;
-}
-
-.card:hover {
-    background: #272727;
-}
-
-.card:hover .albumplay{
-    opacity: 1;
-    transform: translateY(-4px);
-}
 
 
 
-.playbar {
-    grid-area: playbar;
-    background: #282828;
-    display: flex;
-    align-items: center;
-    padding: 0 16px;
-}
-
-.current-playing {
-    /* background: red; */
-    flex: 0.4;
-    display: flex;
-    align-items: center;
-}
-
-.current-playing img {
-    height: 56px;
-    width: 56px;
-}
-
-.cur-info {
-    margin-left: 14px;
-    display: flex;
-    flex-direction: column;
-
-}
-
-.cur-title {
-    color: white;
-    font-weight: 500;
-}
-
-.cur-author {
-    font-weight: 500;
-}
-
-.playback {
-    /* background: blue; */
-    flex: 0.8;
-}
-
-.play-options {
-    /* background: green; */
-    flex: 0.4;
-}
-
-.playback {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: column
-}
-.playOptions {
-    width: 50%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-.mainicons {
-    width: 25px;
-}
-
-.playicon{
-    width: 40px;
-}
-
-.mainicons{
-    opacity: 0.6;
-    cursor: pointer;
-}
-
-
-.mainicons:hover {
-    opacity: 1;
-}
-
-
-.slider {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-}
-
-.range-slider {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 80%;
-}
-
-
-.range-slider__range {
-  -webkit-appearance: none;
-  width: 100%;
-  height: 5px;
-  border-radius: 5px;
-  background: #2c3e50;
-  outline: none;
-  overflow: hidden;
-}
-
-.range-slider__range::-moz-range-thumb {
-  width: 15px;
-  height: 15px;
-  border: 0;
-  border-radius: 50%;
-  background: #375574;
-  cursor: pointer;
-  -moz-transition: background .15s ease-in-out;
-  transition: background .15s ease-in-out;
-}
-.range-slider__range::-moz-range-thumb:hover {
-  background: #1abc9c;
-}
-.range-slider__range:active::-moz-range-thumb {
-  background: #1abc9c;
-}
-
-.range-slider__range[type="range"]::-moz-range-progress {
-  background-color: #1db954;
-  height: 100%;
-  border-radius: 5px;
-}
-.range-slider__range[type='range'] {
-    cursor: pointer;
-    -webkit-appearance: none;
-    width: 100%;
-    height: 5px;
-    border-radius: 5px;
-    background: #2c3e50;
-    outline: none;
-}
-
-.range-slider__range[type='range']::-webkit-slider-runnable-track {
-    height: 15px;
-    -webkit-appearance: none;
-    color: #13bba4;
-}
-
-.range-slider__range[type='range']::-webkit-slider-thumb {
-    width: 15px;
-    height: 15px;
-    border: 0;
-    border-radius: 50%;
-    cursor: pointer;
-    transition: background .15s ease-in-out;
-    -webkit-appearance: none;
-    background: #434343;
-    box-shadow: -1000px 0 0 1000px #1db954;
-}
-
-
-.play-options {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
 .ytbPlayerCont {
     position: absolute;
@@ -631,12 +396,10 @@ input:invalid {
   .grid-container {
   display: grid;
   grid-template-columns: 0 auto;
-  grid-template-rows: 60px auto 90px;
   gap: 0px 0px;
   grid-template-areas:
     "sidebar navbar"
-    "sidebar main"
-    "playbar playbar";
+    "sidebar main";
 }
 .albumplay img {
     transform: scale(1.05);
@@ -653,7 +416,7 @@ input:invalid {
   margin-left: 30px;
 }
 .searchBarIcon{
-  /* display: none; */
+
   position: absolute;
   height: 20px;
 }
