--- a/templates/artist/artist.html
+++ b/templates/artist/artist.html
@@ -33,10 +33,10 @@
               <div class="artist__info__actions">
 
                 <button class="button-dark">
-                  Play
+                  Follow
                 </button>
 
-                <button class="button-light">Follow</button>
+
 
                 <button class="button-light more">
                     <i class="fas fa-heart fa-9x" style="color: #34a247; font-size: 13px"></i>
