--- a/templates/music/album_detail.html
+++ b/templates/music/album_detail.html
@@ -1,4 +1,5 @@
 {% extends "music/liked_songs.html" %}
+
 {% load static %}
 {% block css %}
 <link rel="stylesheet" href="{% static 'css/likedsong.css' %}?{% now " U " %}">
@@ -10,6 +11,7 @@
 {% block liked-song %}
 active
 {% endblock %}
+
 {% block main %}
 <div class="playlist__banner">
     <div class="playlist__left">
@@ -36,15 +38,21 @@ active
     <div class="playlist__songlist">
         {% for song in albums.music.all %}
         <form action="" method="get">
-            <div class="playlist__song playlist__row" onclick='playSong("{{ song.file }}","false","true")'>
+
+            <div class="playlist__song playlist__row" >
+
                 <div class="playlist__headerTitle">
                     <img class="playlist__albumimg" src="{{song.image.url}}" alt =''/>
                     <a href="{% url "music:detail" song.pk %}">
                     <div class="playlist__songTitle ellipsis_one_line">
                         {{song.name}}
                     </div>
+
                     <textarea name="song" id="song_name_delete" cols="1" rows="1">{{song.name}}</textarea>
                     </a>
+                    <audio id="myAudio" controls >
+                        <source src="{{ song.file.url }}" type="audio/mpeg">
+                    </audio>
                 </div>
                 {% for artist in song.artists.all %}
                 <a href="{% url 'artist:artist_detail' pk=artist.pk %}">{{ artist.pseudonym }}
@@ -53,11 +61,13 @@ active
                 <div class="playlist__headerDate">{{song.year}}</div>
                 <div class="playlist__headerDuration">
                     {{song.duration}}
-                    <button type='submit' class="delete"><img src="https://cdn.discordapp.com/attachments/768083738848133130/777588678028951572/delete-icon-28.jpg" alt=""</button>
+
                 </div>
             </div>
         </form>
         {% endfor %}
     </div>
+
 </div>
+
 {% endblock %}
