--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,7 +1,59 @@
- <form method="POST">
+{% load static %}
+
+<html lang="en">
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" href="https://cdn.discordapp.com/icons/715958380556058684/773d6583cd1d7aef41e701783d353aef.webp?size=128" type="image/x-icon">
+<meta name="description" itemprop="description"
+        content="Play your playlists and favourites tracks, albums, and artists of YouTube with a Spotify styled UI" />
+    <meta name="keywords"
+        content="convert, convert playlists, transfer, syncing, smart links, free, apple music, streaming services, spotify, youtube" />
+
+	<link rel="stylesheet" href="{% static "css/login.css" %}">
+
+	<title>Youttify</title>
+</head>
+
+<body>
+
+
+			<div class="signup_header">
+
+                <a href="{% url "home:home" %}" target="">
+				<img
+                    src="https://cdn.discordapp.com/attachments/768083738848133130/768372618880483328/spotify.svg"></img>
+                    </a>
+            </div>
+        </a>
+        <div class="signup_body">
+
+<form class="login_form" method='POST' enctype="multipart/form-data">
     {% csrf_token %}
-    {{ form.as_p }}
-        <button type="submit" class="brn btn-success">RESET</button>
-    </form>
+ <span class='label signup-title center-align'>Enter your new password twice.</span>
+    <label for="new-password" class="label">
+        New password
+    </label>
+
+    <input type="password" class="form_input custom_password_input" id="new-password" name="new_password1" placeholder="New Password" required>
+
+    <label for="confirm-password" class="label">
+        Confirm password
+    </label>
+
+    <input type="password" class="form_input custom_password_input" id="confirm-password" name="new_password2" placeholder="Confirm Password" required>
+
+     <button class='btn btn_log_in' type="submit">Reset</button>
+            <div class="divider"></div>
+
+</form>
+        </div>
+
+
+    </body>
+
+
+</html>
 
 
