--- a/templates/users/artist_profile.html
+++ b/templates/users/artist_profile.html
@@ -30,10 +30,11 @@
 
 
               <div class="artist__info__actions">
-
+<a href="{% url "music:add_music"%}">
                 <button class="button-dark">
                   ADD music
                 </button>
+    </a>
 <a href="{% url "user:edit_profile" user.pk %}">
                 <button class="button-light"> Edit profile</button>
 </a>
@@ -94,56 +95,22 @@
                 <div class="overview__artist">
 
 
-      {% if user.artist.music.all %}
-        {% with latest_music=artists.music.all|first %}
-        <div class="section-title">Latest Released</div>
 
-      <a href="{% url "music:detail" latest_music.pk %}"></a>
-
-        <div class="latest-release">
-
-            <div class="latest-release__art">
-                <img src="{{ latest_music.image.url }}" alt="{{ latest_music.name }}" />
-            </div>
-
-            <div class="latest-release__song">
-
-                <div class="latest-release__song__title">{{ latest_music.name }}</div>
-
-                <div class="latest-release__song__date">
-                    <span class="day">{{ latest_music.created_at.day }}</span>
-                    <span class="month">{{ latest_music.created_at|date:"F" }}</span>
-                    <span class="year">{{ latest_music.created_at.year }}</span>
-
-                </div>
-
-
-
-
-            </div>
-
-        </div>
-    {% endwith %}
-{% else %}
-    <p>{{user.artist.pseudonym}} has not released any songs yet.</p>
-{% endif %}
-
-
-                    </div>
 
                   </div>
 
                   <div class="section-title">Songs</div>
-      {% for song in artists.music.all %}
-              <a href="{% url "music:detail" song.pk %}">  <div class="tracks">
+      {% for song in user.artist.music.all %}
+
+                  <div class="tracks">
 
 
 
                     <div class="track">
 
                       <div class="track__art">
-
-                        <img src="{{ song.image.url }}" alt="When It's Dark Out" />
+ <a href="{% url "music:detail" song.pk %}">
+                        <img src="{{ song.image.url }}" alt="When It's Dark Out" /></a>
 
                       </div>
 
@@ -154,18 +121,16 @@
                         <i class="ion-checkmark-round added"></i>
 
                       </div>
+<a href="{% url "music:detail" song.pk %}">
+                      <div class="track__title">{{ song.name }}</div></a>
 
-                      <div class="track__title">{{ song.name }}</div>
 
-                      <div class="track__explicit">
-
-                        <span class="label">{{ song.created_at.year }}</span>
-
-                      </div>
 
                       <div class="track__plays">{{ song.listens|intcomma}}</div>
+                      <a href="{% url "music:edit_music" song.pk %}"><div class="track__plays">Edit</div></a>
+                        <div class="track__plays">Delete</div>
 
-                    </div></a>
+                    </div>
 
 
 {% endfor %}
