--- a/static/css/edit_artist_profile.css
+++ b/static/css/edit_artist_profile.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 *{
   margin: 0;
+
   outline: none;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
@@ -25,12 +26,11 @@ body{
   opacity: 0.9;
   z-index: -1;
 }
-
 .container{
-	height: 600px;
-  width: 800px;
+	height: 400px;
+  max-width: 800px;
   background:  #474747;
-  width: 800px;
+  width: 600px;
   padding: 25px 40px 10px 40px;
   box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
   border-radius:10%;
@@ -58,7 +58,7 @@ form .form-row .input-data{
 form .form-row .img-input-data{
 	width: 60%;
 	height: 40px;
-
+	
 	position: relative;
   }
 form .form-row .textarea{
@@ -168,6 +168,5 @@ form .form-row .submit-btn {
   }
   .submit-btn .input-data{
     width: 40%!important;
-  }
-
+  }z
 }
