--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -125,6 +125,38 @@
   }
 
   .card__action--message:hover:before {
-    border: 4px solid blue;
-  }
+    border: 4px solid blue;}
 
+
+    input {
+
+        background: #929d92b3;
+        margin: 12px auto;
+        padding: 10px;
+        border: none;
+        outline: none;
+        border-radius: 5px;
+    }
+
+
+    button {
+        width: 60%;
+        height: 40px;
+        margin: 10px auto;
+        justify-content: center;
+        display: block;
+        color: black;
+        background: green;
+        font-size: 1em;
+        font-weight: bold;
+        margin-top: 20px;
+        outline: none;
+        border: none;
+        border-radius: 5px;
+        transition: .2s ease-in;
+        cursor: pointer;
+    }
+
+    button:hover {
+        background: #0bee0b;
+    }
