--- a/templates/artist/artist.html
+++ b/templates/artist/artist.html
@@ -1,14 +1,12 @@
 {% extends "main_base.html" %}
-
 {% load static %}
 {% load humanize %}
 
 {% block content %}
 
-<link rel="stylesheet" href="{% static "css/music_detail.css" %}">
+  <link rel="stylesheet" href="{% static 'css/music_detail.css' %}">
 
     <div class="content__middle">
-
         <div class="artist__header" style="background-image: url('{{ artists.cover_image.url }}');">
 
           <div class="artist__info">
@@ -86,205 +84,199 @@
           </div>
 
         </div>
-
         <div class="artist__content">
 
           <div class="tab-content">
 
             <div role="tabpanel" class="tab-pane active" id="artist-overview">
 
-              <div class="overview">
+                    <div class="overview">
 
-                <div class="overview__artist">
-
-
-      {% if artists.music.all %}
-        {% with latest_music=artists.music.all|first %}
-        <div class="section-title">Latest Released</div>
-
-      <a href="{% url "music:detail" latest_music.pk %}"></a>
-
-        <div class="latest-release">
-
-            <div class="latest-release__art">
-                <img src="{{ latest_music.image.url }}" alt="{{ latest_music.name }}" />
-            </div>
-
-            <div class="latest-release__song">
-
-                <div class="latest-release__song__title">{{ latest_music.name }}</div>
-
-                <div class="latest-release__song__date">
-                    <span class="day">{{ latest_music.created_at.day }}</span>
-                    <span class="month">{{ latest_music.created_at|date:"F" }}</span>
-                    <span class="year">{{ latest_music.created_at.year }}</span>
-
-                </div>
+                      <div class="overview__artist">
 
 
+                          {% if artists.music.all %}
+                            {% with latest_music=artists.music.all|first %}
+                            <div class="section-title">Latest Released</div>
+
+                          <a href="{% url 'music:detail' latest_music.pk %}"></a>
+
+                            <div class="latest-release">
+
+                                <div class="latest-release__art">
+                                    <img src="{{ latest_music.image.url }}" alt="{{ latest_music.name }}" />
+                                </div>
+
+                                <div class="latest-release__song">
+
+                                    <div class="latest-release__song__title">{{ latest_music.name }}</div>
+
+                                    <div class="latest-release__song__date">
+                                        <span class="day">{{ latest_music.created_at.day }}</span>
+                                        <span class="month">{{ latest_music.created_at|date:"F" }}</span>
+                                        <span class="year">{{ latest_music.created_at.year }}</span>
+
+                                    </div>
+
+                                </div>
+
+                            </div>
+                              {% endwith %}
+                            {% else %}
+                            <p>{{ artist.first_name }} {{ artist.last_name }} has not released any songs yet.</p>
+                            {% endif %}
 
 
-            </div>
-
-        </div>
-    {% endwith %}
-{% else %}
-    <p>{{ artist.first_name }} {{ artist.last_name }} has not released any songs yet.</p>
-{% endif %}
-
+                      </div>
 
                     </div>
 
-                  </div>
-
-                  <div class="section-title">Popular</div>
-      {% for song in artists.music.all %}
-              <a href="{% url "music:detail" song.pk %}">  <div class="tracks">
+                    <div class="section-title">Popular</div>
+                  {% for song in artists.music.all %}
+                    <a href="{% url 'music:detail' song.pk %}">  <div class="tracks">
 
 
 
-                    <div class="track">
+                          <div class="track">
 
-                      <div class="track__art">
+                            <div class="track__art">
 
-                        <img src="{{ song.image.url }}" alt="When It's Dark Out" />
+                              <img src="{{ song.image.url }}" alt="When It's Dark Out" />
 
-                      </div>
+                            </div>
 
-                      <div class="track__number">{{ forloop.counter }}</div>
+                            <div class="track__number">{{ forloop.counter }}</div>
 
-                      <div class="track__added">
+                            <div class="track__added">
 
-                        <i class="ion-checkmark-round added"></i>
+                              <i class="ion-checkmark-round added"></i>
 
-                      </div>
+                            </div>
 
-                      <div class="track__title">{{ song.name }}</div>
+                            <div class="track__title">{{ song.name }}</div>
 
-                      <div class="track__explicit">
+                            <div class="track__explicit">
 
-                        <span class="label">{{ song.created_at.year }}</span>
+                              <span class="label">{{ song.created_at.year }}</span>
 
-                      </div>
+                            </div>
 
-                      <div class="track__plays">{{ song.listens|intcomma}}</div>
-
+                            <div class="track__plays">{{ song.listens|intcomma}}</div>
+                          </div>
                     </div></a>
 
 
-{% endfor %}
+      {% endfor %}
 
-                <div class="overview__related">
+                      <div class="overview__related">
 
-                  <div class="section-title">Related Artists</div>
+                        <div class="section-title">Related Artists</div>
 
-                  <div class="related-artists">
+                        <div class="related-artists">
 
-                    <a href="#" class="related-artist">
+                          <a href="#" class="related-artist">
 
-                      <span class="related-artist__img">
+                            <span class="related-artist__img">
 
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/7022/hoodie.jpg" alt="Hoodie Allen" />
+                              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/7022/hoodie.jpg" alt="Hoodie Allen" />
 
-                      </span>
+                            </span>
 
-                      <span class="related-artist__name">Hoodie Allen</span>
+                            <span class="related-artist__name">Hoodie Allen</span>
 
-                    </a>
+                          </a>
 
-                    <a href="#" class="related-artist">
+                          <a href="#" class="related-artist">
 
-                      <span class="related-artist__img">
+                            <span class="related-artist__img">
 
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/7022/mikestud.jpg" alt="Mike Stud" />
+                              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/7022/mikestud.jpg" alt="Mike Stud" />
 
-                      </span>
+                            </span>
 
-                      <span class="related-artist__name">Mike Stud</span>
+                            <span class="related-artist__name">Mike Stud</span>
 
-                    </a>
+                          </a>
 
-                    <a href="#" class="related-artist">
+                          <a href="#" class="related-artist">
 
-                      <span class="related-artist__img">
+                            <span class="related-artist__img">
 
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/7022/drake.jpeg" alt="Drake" />
+                              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/7022/drake.jpeg" alt="Drake" />
 
-                      </span>
+                            </span>
 
-                      <span class="related-artist__name">Drake</span>
+                            <span class="related-artist__name">Drake</span>
 
-                    </a>
+                          </a>
 
-                    <a href="#" class="related-artist">
+                          <a href="#" class="related-artist">
 
-                      <span class="related-artist__img">
+                            <span class="related-artist__img">
 
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/7022/jcole.jpg" alt="J. Cole" />
+                              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/7022/jcole.jpg" alt="J. Cole" />
 
-                      </span>
+                            </span>
 
-                      <span class="related-artist__name">J. Cole</span>
+                            <span class="related-artist__name">J. Cole</span>
 
-                    </a>
+                          </a>
 
-                    <a href="#" class="related-artist">
+                          <a href="#" class="related-artist">
 
-                      <span class="related-artist__img">
+                            <span class="related-artist__img">
 
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/7022/bigsean.jpg" alt="Big Sean" />
+                              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/7022/bigsean.jpg" alt="Big Sean" />
 
-                      </span>
+                            </span>
 
-                      <span class="related-artist__name">Big Sean</span>
+                            <span class="related-artist__name">Big Sean</span>
 
-                    </a>
+                          </a>
 
-                    <a href="#" class="related-artist">
+                          <a href="#" class="related-artist">
 
-                      <span class="related-artist__img">
+                            <span class="related-artist__img">
 
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/7022/wiz.jpeg" alt="Wiz Khalifa" />
+                              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/7022/wiz.jpeg" alt="Wiz Khalifa" />
 
-                      </span>
+                            </span>
 
-                      <span class="related-artist__name">Wiz Khalifa</span>
+                            <span class="related-artist__name">Wiz Khalifa</span>
 
-                    </a>
+                          </a>
 
-                    <a href="#" class="related-artist">
+                          <a href="#" class="related-artist">
 
-                      <span class="related-artist__img">
+                            <span class="related-artist__img">
 
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/7022/yonas.jpg" alt="Yonas" />
+                              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/7022/yonas.jpg" alt="Yonas" />
 
-                      </span>
+                            </span>
 
-                      <span class="related-artist__name">Yonas</span>
+                            <span class="related-artist__name">Yonas</span>
 
-                    </a>
+                          </a>
 
-                  </div>
+                        </div>
 
-                </div>
+                      </div>
 
-                <div class="overview__albums">
+                      <div class="overview__albums">
 
-                  <div class="overview__albums__head">
+                        <div class="overview__albums__head">
 
-                    <span class="section-title">Albums</span>
-
-
-
-                  </div>
+                          <span class="section-title">Albums</span>
 
 
 
-                </div>
-
-              </div>
+                        </div>
 
 
+
+                      </div>
+
+                    </div>
             </div>
 
             <div role="tabpanel" class="tab-pane" id="related-artists">
@@ -390,16 +382,9 @@
               </div>
 
             </div>
-
-
           </div>
 
         </div>
-
-      </div>
-
-
-
-
+    </div>
 {% endblock %}
 
