--- a/templates/users/artist_profile.html
+++ b/templates/users/artist_profile.html
@@ -1,4 +1,3 @@
-
 {% extends "main_base.html" %}
 {% load static %}
 {% load humanize %}
@@ -31,12 +30,11 @@
 
               <div class="artist__info__actions">
 
-                <button class="button-dark">
+                  <a href="{% url "music:add_music" %}"><button class="button-dark">
                   ADD music
                 </button>
-<a href="{% url "user:edit_profile" user.pk %}">
-                <button class="button-light"> Edit profile</button>
-</a>
+                  </a>
+        <a href="{% url 'user:edit_profile' user.pk %}"><button class="button-light"> Edit profile</button></a>
 
 
               </div>
@@ -96,11 +94,11 @@
 
       {% if user.artist.music.all %}
         {% with latest_music=artists.music.all|first %}
-        <div class="section-title">Latest Released</div>
+            <div class="section-title">Latest Released</div>
 
-      <a href="{% url "music:detail" latest_music.pk %}"></a>
+            <a href="{% url "music:detail" latest_music.pk %}"></a>
 
-        <div class="latest-release">
+            <div class="latest-release">
 
             <div class="latest-release__art">
                 <img src="{{ latest_music.image.url }}" alt="{{ latest_music.name }}" />
@@ -116,17 +114,13 @@
                     <span class="year">{{ latest_music.created_at.year }}</span>
 
                 </div>
-
-
-
-
             </div>
 
         </div>
-    {% endwith %}
-{% else %}
-    <p>{{user.artist.pseudonym}} has not released any songs yet.</p>
-{% endif %}
+        {% endwith %}
+      {% else %}
+        <p>{{user.artist.pseudonym}} has not released any songs yet.</p>
+      {% endif %}
 
 
                     </div>
@@ -134,8 +128,8 @@
                   </div>
 
                   <div class="section-title">Songs</div>
-      {% for song in artists.music.all %}
-              <a href="{% url "music:detail" song.pk %}">  <div class="tracks">
+                {% for song in artists.music.all %}
+              <a href="{% url 'music:detail' song.pk %}"> <div class="tracks">
 
 
 
@@ -165,9 +159,13 @@
 
                       <div class="track__plays">{{ song.listens|intcomma}}</div>
 
-                    </div></a>
-
-
-{% endfor %}
+                    </div>
+            </div>
+                </a>
+                    {% endfor %}
+            </div>
+          </div>
+        </div>
+    </div>
 {% endblock %}
 
