--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -18,11 +18,11 @@
           <span>likes songs</span>
         </li>
         <li>
-          <span class="card__info__stats">47</span>
-          <span>followers</span>
+          <span class="card__info__stats">172</span>
+          <span>Playlist songs</span>
         </li>
         <li>
-          <span class="card__info__stats">20</span>
+          <span class="card__info__stats">{{user.follows}}</span>
           <span>following</span>
         </li>
       </ul>
