--- a/templates/music/music_detail.html
+++ b/templates/music/music_detail.html
@@ -33,7 +33,7 @@
               <div class="artist__info__actions">
 
                 <button class="button-dark">
-                  Add
+                  <a href="/">Add</a>
                 </button>
 
 
